src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BillingGeoCodeData__c</fullName>
        <label>BillingGeoCodeData</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>BillingLastGeocoded__c</fullName>
        <description>This is the last date/time of a geocode.</description>
        <label>BillingLastGeocoded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BillingNeedsGeocodeUpdated__c</fullName>
        <formula>If(ISBLANK(BillingLastGeocoded__c), &quot;True&quot;,
If(BillingLastGeocoded__c &lt; LastModifiedDate, &quot;True&quot;, &quot;False&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillingNeedsGeocodeUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShippingGeoCodeData__c</fullName>
        <label>ShippingGeoCodeData</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ShippingLastGeocoded__c</fullName>
        <label>ShippingLastGeocoded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShippingNeedsGeocodeUpdated__c</fullName>
        <formula>If(ISBLANK(ShippingLastGeocoded__c), &quot;True&quot;,
If(ShippingLastGeocoded__c &lt; LastModifiedDate , &quot;True&quot;, &quot;False&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShippingNeedsGeocodeUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Geocoding</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>0BCE000000000Aa</columns>
        <columns>0BCE000000000Ab</columns>
        <columns>BillingNeedsGeocodeUpdated__c</columns>
        <columns>ShippingNeedsGeocodeUpdated__c</columns>
        <columns>0BCE000000000Au</columns>
        <columns>0BCE000000000Av</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShippingNeedsGeocodeUpdated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <filters>
            <field>BillingNeedsGeocodeUpdated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <label>Geocoding</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Test_is_read_only</fullName>
        <active>false</active>
        <description>08/13/13 - Accounts named Test are read only.  This is for testing skip records</description>
        <errorConditionFormula>Name = &quot;Test&quot;</errorConditionFormula>
        <errorMessage>Test Accounts are read only</errorMessage>
    </validationRules>
</CustomObject>